--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=3000
 logging.level.web=DEBUG
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
