Implemented Mongo and comnfigured (badly) integration testing with the db running in a docker container

--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -4,6 +4,4 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
 spring.data.mongodb.database=test
-
-mongodb.hostname=localhost
-mongodb.port=27018
+spring.data.mongodb.port=27018
