--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -5,3 +5,4 @@ spring.web.resources.add-mappings=false
 
 spring.data.mongodb.database=test
 spring.data.mongodb.port=27018
+spring.data.mongodb.host=172.17.0.2
