--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,5 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
 spring.data.mongodb.database=test
-
-mongodb.hostname=localhost
-mongodb.port=27018
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=f8940c41ec8e
