--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -5,4 +5,4 @@ spring.web.resources.add-mappings=false
 
 spring.data.mongodb.database=test
 spring.data.mongodb.port=27017
-spring.data.mongodb.host=jenkins-mongo
+spring.data.mongodb.host=localhost
