--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,14 @@
 server.port=3000
 logging.level.web=DEBUG
+log4j.category.org.springframework.data.mongodb=DEBUG
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
-spring.devtools.add-properties=false
 
-spring.data.mongodb.database=panda-default
+
+spring.data.mongodb.database=panda-dev
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 
-mongodb.database=panda-default
+mongodb.database=panda-dev
 mongodb.host=localhost
 mongodb.port=27017
