--- a/src/main/resources/application-jenkins.properties
+++ b/src/main/resources/application-jenkins.properties
@@ -3,6 +3,10 @@ logging.level.web=DEBUG
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
-spring.data.mongodb.database=test
+spring.data.mongodb.database=panda-jenkins
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=jenkins-mongo
+
+mongodb.database=panda-jenkins
+mongodb.host=localhost
+mongodb.port=27017
