Fixed incorrect hostname for jenkins mongo.

--- a/src/main/resources/application-jenkins.properties
+++ b/src/main/resources/application-jenkins.properties
@@ -8,5 +8,5 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.host=jenkins-mongo
 
 mongodb.database=panda-jenkins
-mongodb.host=localhost
+mongodb.host=jenkins-mongo
 mongodb.port=27017
