Photo upload process complete up to integrating s3.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,3 +12,6 @@ spring.data.mongodb.host=localhost
 mongodb.database=panda-dev
 mongodb.host=localhost
 mongodb.port=27017
+
+
+s3.bucketName="panda-dev-bucket"
