--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,11 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.13.2</version>
 		</dependency>
-
-
+		<dependency>
+			<groupId>io.awspring.cloud</groupId>
+			<artifactId>spring-cloud-starter-aws</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
