--- a/src/main/resources/application-jenkins.properties
+++ b/src/main/resources/application-jenkins.properties
@@ -10,3 +10,5 @@ spring.data.mongodb.host=jenkins-mongo
 mongodb.database=panda-jenkins
 mongodb.host=jenkins-mongo
 mongodb.port=27017
+
+s3.bucketName="panda-jenkins-bucket"
