--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.data.mongodb.host=localhost
 mongodb.database=panda-default
 mongodb.host=localhost
 mongodb.port=27017
+
+s3.bucketName="panda-default-bucket"
