Actually adding the changed files...

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,6 +4,8 @@ log4j.category.org.springframework.data.mongodb=DEBUG
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
 
 spring.data.mongodb.database=panda-dev
 spring.data.mongodb.port=27017
@@ -13,5 +15,10 @@ mongodb.database=panda-dev
 mongodb.host=localhost
 mongodb.port=27017
 
+mongodb.testDatabase=testtesttest
 
-s3.bucketName="panda-dev-bucket"
+
+s3.bucketName=panda-dev-bucket
+aws-access-key=local-dev
+aws-secret-key=Passw0rd
+aws-region=eu-west-1
