--- a/src/main/resources/application-jenkins.properties
+++ b/src/main/resources/application-jenkins.properties
@@ -3,6 +3,9 @@ logging.level.web=DEBUG
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
 spring.data.mongodb.database=panda-jenkins
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=jenkins-mongo
@@ -11,4 +14,7 @@ mongodb.database=panda-jenkins
 mongodb.host=jenkins-mongo
 mongodb.port=27017
 
-s3.bucketName="panda-jenkins-bucket"
+s3.bucketName=panda-jenkins-bucket
+aws-access-key=access-key
+aws-secret-key=secret-key
+aws-region=eu-west-1
