--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 spring.devtools.add-properties=false
 
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
 spring.data.mongodb.database=panda-default
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
@@ -12,4 +15,9 @@ mongodb.database=panda-default
 mongodb.host=localhost
 mongodb.port=27017
 
-s3.bucketName="panda-default-bucket"
+mongodb.testDatabase=panda-default-test
+
+s3.bucketName=panda-default-bucket
+aws-access-key=access-key
+aws-secret-key=secret-key
+
