Fixed jenkins minios hostname and port.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,8 +15,8 @@ mongodb.database=panda-dev
 mongodb.host=localhost
 mongodb.port=27017
 
-mongodb.testDatabase=testtesttest
-
+s3.minio.hostname=localhost
+s3.minio.port=9000
 
 s3.bucketName=panda-dev-bucket
 aws-access-key=local-dev
