--- a/src/main/resources/application-jenkins.properties
+++ b/src/main/resources/application-jenkins.properties
@@ -1,5 +1,6 @@
 server.port=3000
 logging.level.web=DEBUG
+log4j.category.org.springframework.data.mongodb=DEBUG
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
@@ -13,6 +14,9 @@ spring.data.mongodb.host=jenkins-mongo
 mongodb.database=panda-jenkins
 mongodb.host=jenkins-mongo
 mongodb.port=27017
+
+s3.minio.hostname=jenkins-s3
+s3.minio.port=9000
 
 s3.bucketName=panda-jenkins-bucket
 aws-access-key=access-key
