--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=3000
 logging.level.web=DEBUG
+log4j.category.org.springframework.data.mongodb=INFO
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 spring.devtools.add-properties=false
@@ -15,7 +16,8 @@ mongodb.database=panda-default
 mongodb.host=localhost
 mongodb.port=27017
 
-mongodb.testDatabase=panda-default-test
+s3.minio.hostname=localhost
+s3.minio.port=9000
 
 s3.bucketName=panda-default-bucket
 aws-access-key=access-key
