Adding updated details for minios:

--- a/src/main/resources/application-jenkins.properties
+++ b/src/main/resources/application-jenkins.properties
@@ -19,6 +19,6 @@ s3.minio.hostname=jenkins-s3
 s3.minio.port=9000
 
 s3.bucketName=panda-jenkins-bucket
-aws-access-key=access-key
-aws-secret-key=secret-key
+aws-access-key=local-dev
+aws-secret-key=Passw0rd
 aws-region=eu-west-1
