Trying to fix error.

--- a/src/main/resources/application-jenkins.properties
+++ b/src/main/resources/application-jenkins.properties
@@ -4,6 +4,9 @@ log4j.category.org.springframework.data.mongodb=DEBUG
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
+logging.level.com.amazonaws.util.EC2MetadataUtils=error
+logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=error
+
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
