--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,6 +11,9 @@ spring.data.mongodb.database=panda-dev
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 
+cloud.aws.region.static.auto: false
+cloud.aws.region.static: eu-west-1
+
 mongodb.database=panda-dev
 mongodb.host=localhost
 mongodb.port=27017
