--- a/src/main/resources/application-jenkins.properties
+++ b/src/main/resources/application-jenkins.properties
@@ -14,6 +14,9 @@ spring.data.mongodb.database=panda-jenkins
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=jenkins-mongo
 
+cloud.aws.region.static.auto: false
+cloud.aws.region.static: eu-west-1
+
 mongodb.database=panda-jenkins
 mongodb.host=jenkins-mongo
 mongodb.port=27017
