--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=3000
 logging.level.web=DEBUG
 log4j.category.org.springframework.data.mongodb=INFO
+logging.level.org.springframework.data.convert.CustomConversions: ERROR
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 spring.devtools.add-properties=false
