initial docker dev environment setup config.

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.titanium-panda</groupId>
 	<artifactId>titanium-panda-app</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>titanium-panda-app</name>
 	<description>photo portfolio api</description>
 	<properties>
