should pass tests, maybe fail on docker.

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -19,9 +19,9 @@ mongodb.host=localhost
 mongodb.port=27017
 
 s3.minio.hostname=localhost
-s3.minio.port=9000
+s3.minio.port=9005
 
-s3.bucketName=panda-test-bucket
-aws-access-key=local-dev
+s3.bucketName=panda-docker-bucket
+aws-access-key=admin
 aws-secret-key=Passw0rd
 aws-region=eu-west-1
