--- a/src/main/resources/application-jenkins.properties
+++ b/src/main/resources/application-jenkins.properties
@@ -25,6 +25,6 @@ s3.minio.hostname=jenkins-s3
 s3.minio.port=9000
 s3.bucketName=panda-jenkins-bucket
 
-aws-access-key=local-dev
+aws-access-key=admin
 aws-secret-key=Passw0rd
 aws-region=eu-west-1
