atempting to fix jenkins mongo container

--- a/src/main/resources/application-jenkins.properties
+++ b/src/main/resources/application-jenkins.properties
@@ -18,7 +18,7 @@ cloud.aws.region.static.auto: false
 cloud.aws.region.static: eu-west-1
 
 mongodb.database=panda-jenkins
-mongodb.host=localhost
+mongodb.host=jenkins-mongo
 mongodb.port=27017
 
 s3.minio.hostname=jenkins-s3
