add right s3 hostname.

--- a/src/main/resources/application-jenkins.properties
+++ b/src/main/resources/application-jenkins.properties
@@ -21,7 +21,7 @@ mongodb.database=panda-jenkins
 mongodb.host=jenkins-mongo
 mongodb.port=27017
 
-s3.minio.hostname=panda-jenkins-s3
+s3.minio.hostname=jenkins-s3
 s3.minio.port=9000
 s3.bucketName=panda-jenkins-bucket
 
