--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,16 +12,17 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 
 cloud.aws.region.static.auto: false
-cloud.aws.region.static: eu-west-1
+cloud.aws.region.static: us-east-1
 
 mongodb.database=panda-dev
 mongodb.host=localhost
 mongodb.port=27017
 
-s3.minio.hostname=localhost
-s3.minio.port=9000
+s3.http=https
+s3.hostname=s3.us-east-1.amazonaws.com
+s3.port=443
+s3.bucketName=panda-docker-bucket-763
 
-s3.bucketName=panda-dev-bucket
-aws-access-key=local-dev
-aws-secret-key=Passw0rd
-aws-region=eu-west-1
+aws-access-key=${ACCESS_KEY}
+aws-secret-key=${SECRET_KEY}
+aws-region=us-east-1
