--- a/src/main/resources/application-jenkins.properties
+++ b/src/main/resources/application-jenkins.properties
@@ -21,8 +21,9 @@ mongodb.database=panda-jenkins
 mongodb.host=jenkins-mongo
 mongodb.port=27017
 
-s3.minio.hostname=jenkins-s3
-s3.minio.port=9000
+s3.http=http
+s3.hostname=jenkins-s3
+s3.port=9000
 s3.bucketName=panda-jenkins-bucket
 
 aws-access-key=admin
