--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,9 @@ mongodb.database=panda-default
 mongodb.host=localhost
 mongodb.port=27017
 
-s3.minio.hostname=localhost
-s3.minio.port=9000
+s3.http=http
+s3.hostname=localhost
+s3.port=9000
 
 s3.bucketName=panda-default-bucket
 aws-access-key=access-key
