--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -18,10 +18,11 @@ mongodb.database=panda-test
 mongodb.host=localhost
 mongodb.port=27017
 
-s3.minio.hostname=localhost
-s3.minio.port=9005
-
+s3.http=http
+s3.hostname=localhost
+s3.port=9005
 s3.bucketName=panda-docker-bucket
+
 aws-access-key=admin
 aws-secret-key=Passw0rd
-aws-region=eu-west-1
+aws-region=eu-east-1
